--- a/Innentitelseite.tex
+++ b/Innentitelseite.tex
@@ -21,7 +21,7 @@
 %Titel der Diplomarbeit
 \begin{minipage}{14cm} 
 	{\LARGE DIPLOMARBEIT} \\[12mm]
-	\doublespacing\textbf{\LARGE Development and investigation of a finite-element model for predicitng railway vehicle underfloor noise}
+	\doublespacing\textbf{\LARGE Development and investigation of a finite-element model for predicting railway vehicle underfloor noise}
 	%\\[0.3cm]
 	%\textbf{\LARGE Modelling for Railway Vehicles}
 \end{minipage}
@@ -39,7 +39,7 @@
     Siemens Mobility Austria GmbH \\[2.5mm]
     Leberstraße 34, A-1110 Wien \\[8mm]
 	eingereicht an der Technischen Univeristät Wien \\[2.5mm]
-	\textbf{Fakultät für Elektrotechnik und Informationstechnik} \\[4mm]
+	\textbf{Fakultät für Maschinenwesen und Betriebswissenschaften} \\[4mm]
 	von \\[20mm]
 	Likun LUO \\[2.5mm]
 	Matrikelnummer 11771106 \\[2.5mm]
