--- a/Chapter5_Results.tex
+++ b/Chapter5_Results.tex
@@ -31,6 +31,22 @@ In the following, the results obtained from the finite element simulation using 
 	\label{fig:third_octave_over_height}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.49\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{fig/chap5/initial_model/overall_SPL/all_pos.png}
+		%\caption{2000 Hz}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.49\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{fig/chap5/initial_model/overall_SPL/deviation.png}
+		%\caption{2000 Hz}
+	\end{subfigure}
+	\caption{Comparison of overall SPL in dBA ref 20 $\mu$Pa. Left: overall SPL as a function of height at various measurement positions (dashed curves: measurement; solid curves: simulation) Right: difference between simulation and measurement results}
+	\label{fig:overall_SPL}
+\end{figure}
+
 
 \section{Effect of geometric variation}
 
